--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,7 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; environment
 [env:esp32-c3-devkitm-1]
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
+
+; serial moniter
+monter_speed = 115200
+
+; dependencies
+lib_deps = 
+    adafruit/Adafruit MPU6050
