initialized platformio.ini file

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,8 +14,8 @@ platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
 
-; serial moniter
-monter_speed = 115200
+; serial monitor
+monitor_speed = 115200
 
 ; dependencies
 lib_deps = 
