added libraries to platformio.ini

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -19,4 +19,10 @@ monitor_speed = 115200
 
 ; dependencies
 lib_deps = 
+    ; MPU-6050 libraries
     adafruit/Adafruit MPU6050
+    ; Helper libraries
+    adafruit/Adafruit BusIO
+    adafruit/Adafruit Unified Sensor
+    ; Simple/Efficient PID
+    br3ttb/PID
