initialized platformio.ini

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -21,6 +21,7 @@ monitor_speed = 115200
 lib_deps = 
     ; MPU-6050 libraries
     adafruit/Adafruit MPU6050
+    adafruit/Adafruit AHRS
     ; Helper libraries
     adafruit/Adafruit BusIO
     adafruit/Adafruit Unified Sensor
