swapped out all double variables with float

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,22 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; environment
 [env:esp32-c3-devkitm-1]
 platform = espressif32
 board = esp32-c3-devkitm-1
 framework = arduino
-
-; serial monitor
 monitor_speed = 115200
-
-; dependencies
 lib_deps = 
-    ; MPU-6050 libraries
-    adafruit/Adafruit MPU6050
-    adafruit/Adafruit AHRS
-    ; Helper libraries
-    adafruit/Adafruit BusIO
-    adafruit/Adafruit Unified Sensor
-    ; Simple/Efficient PID
-    br3ttb/PID
+	adafruit/Adafruit MPU6050
+	adafruit/Adafruit AHRS
+	adafruit/Adafruit BusIO
+	adafruit/Adafruit Unified Sensor
+	dlloydev/QuickPID
